# my-warehouse

./: .gitignore  AGENTS.md  LICENSE  README.md  specs.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260222_0001_slice1_initial.py  20260222_0002_auth_password_reset.py  20260222_0003_slice2_boxes_items.py  20260222_0004_slice5_invites_activity.py  20260222_0005_slice6_settings_smtp_llm.py  20260222_0006_slice7_slice8_sync_transfer.py  20260304_0007_llm_settings_language.py  20260304_0008_inbound_box.py  20260305_0009_intake_batches.py  20260305_0010_intake_suggested_name.py  20260305_0011_llm_model_priority.py  20260307_0012_intake_quantity_parallelism.py  20260321_0013_reorganization_sessions.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  llm.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  activity_event.py  base.py  box.py  change_log.py  intake_batch.py  intake_draft.py  item.py  item_favorite.py  llm_setting.py  membership.py  password_reset_token.py  processed_command.py  refresh_token.py  (+7 more)
backend/tests/: conftest.py  test_auth_warehouses.py  test_box_reorganization_suggestions.py  test_invite_email.py  test_llm_enrichment_json_parsing.py  test_slice10_intake_batch.py  test_slice2_boxes_items.py  test_slice3_search_tags.py  test_slice4_qr_scan.py  test_slice5_invites_activity.py  test_slice6_settings_llm_smtp.py  test_slice7_sync_conflicts.py  test_slice8_export_import.py  test_slice9_item_photo_draft.py
(+120 files in other folders)
